# bili-songbot

./: .gitignore  AGENT.MD  AGENT.md  AGENTS.md  CHANGELOG_CODEX.md  CODEX_LOGIN_ROOT_GUIDE.md  INSTALL_CODEX_READY_PACK.md  MANIFEST.md  Makefile  OPERATIONS_RUNBOOK.md  PROJECT_CONTEXT.md  README.md  README_CODEX.md  SAFETY_AND_SECRETS.md  SYSTEMD_TOPOLOGY.md  TASK_GUIDE_FOR_CODEX.md  requirements.txt
bili_songbot/: config.py  controller.py  danmaku.py  health.py  logging_setup.py  main.py  matcher.py  media_tools.py  models.py  pusher.py  queue_manager.py  renderer.py  storage.py  ui_layer.py
config/: .env.example  app.yaml  songs.42-template.yaml  songs.yaml
docs/: DEPLOYMENT.md  IMPLEMENTATION_NOTES.md
nginx/: bili-songbot.localhost.conf
paired/live-keeper/: .env.example  .gitignore  README.md  pyproject.toml
paired/live-keeper/scripts/: install.sh  login_biliup.sh  run_once_check.sh  run_once_start.sh  tail_logs.sh
paired/live-keeper/src/bili_live_keeper/: __init__.py  browser.py  cli.py  config.py  cookies.py  logging_utils.py  pusher.py  secrets.py  starter.py  status.py  stopper.py  supervisor.py
paired/live-keeper/systemd/: bili-live-keeper-push.service  bili-live-keeper.service
scripts/: 00_install_deps_ubuntu24.sh  01_prepare_dirs.sh  02_probe_uploaded_media.sh  03_preprocess_all.sh  04_validate_alpha.sh  05_run_stdin_local_test.sh  bili-songbot-use-keeper-stream  codex_backup_before_edit.sh  codex_diagnose_all_live.sh  codex_preflight.sh  diagnose_all_live.sh  diagnose_live.sh
systemd/: bili-songbot-logrotate  bili-songbot-stream-sync.path  (+2 more)
(+5 files in other folders)
