[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bili-live-keeper"
version = "0.1.0"
description = "Headless Bilibili live room keeper using biliup cookies and Playwright."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "playwright==1.46.0",
  "python-dotenv==1.0.1",
  "requests==2.32.3",
]

[project.scripts]
bili-live-keeper = "bili_live_keeper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
